<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparent">

    <!-- Language Preferences -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back_cyan"
            android:contentDescription="back Icon"/>


            <Switch
                android:id="@+id/themeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:checked="false"
                android:layout_margin="20dp"
                 />

        <LinearLayout
            android:id="@+id/languagePreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_preferences"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <!-- Language Spinner -->
            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/language_options"
                android:prompt="@string/select_language_prompt"/>
        </LinearLayout>

        <!-- Notification Preferences -->
        <LinearLayout
            android:id="@+id/notificationPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_preferences"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <!-- Notification Switches -->
            <CheckBox
                android:id="@+id/severeWeatherAlertsCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_severe_weather_alerts"/>

            <CheckBox
                android:id="@+id/dailyForecastUpdatesCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_daily_forecast_updates"/>
        </LinearLayout>

        <!-- Unit of Measurement Preferences -->
        <LinearLayout
            android:id="@+id/unitOfMeasurementPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_of_measurement_preferences"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <!-- Unit of Measurement Radio Buttons -->
            <RadioGroup
                android:id="@+id/unitOfMeasurementRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/metricRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/imperialRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
