<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80005b72"
    >

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:background="#80000000">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_message"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/onboardButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:backgroundTint="@drawable/button_bg_selector"
            android:text="@string/onboard_button_text"
            android:textColor="@color/teal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@drawable/button_bg_selector"
            android:text="@string/get_started_button_text"
            android:textColor="@color/teal"
            android:textSize="18sp" />
    </LinearLayout>


    <include layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>

