<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_card"
    android:orientation="horizontal"
    android:outlineProvider="bounds"
    android:padding="10dp"
    app:barrierMargin="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="40dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/date"
            android:textColor="#80FFFFFF"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="7dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_cloudy" />

        <TextView
            android:id="@+id/conditionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Condition"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="right"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</LinearLayout>
