<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_teal"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:contentDescription="Back Icon"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/observations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationTextView"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:background="@drawable/rounded_card"
        android:orientation="horizontal">

        <!-- First TextView (Temperature) -->
        <LinearLayout
            android:id="@+id/leftobservations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Today"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="10 C"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <!-- Second TextView (Condition) -->
            <TextView
                android:id="@+id/conditionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/cloudyrainy" />
    </LinearLayout>


    <Button
        android:id="@+id/threedayforecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/observations"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/_3_day_forecast"
        android:paddingEnd="8dp"
        app:cornerRadius="12dp" />
    <!-- GridLayout -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/threedayforecast"
        android:columnCount="2"
        android:padding="16dp">

        <!-- CardView 1 (Top Left) -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/windIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_windy"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/wind_speed"
                        android:textColor="#80FFFFFF"
                        android:textSize="15dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/speedOfWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/windSpeed"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:id="@+id/windDirection"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/windyIcon"
                    android:src="@drawable/ic_windy"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/wind_direction"
                    android:textSize="15dp"
                    android:textColor="#80FFFFFF"
                    />

            </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/directionOfWind"
                    android:text=""
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/windDirection"/>

         </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 3 (Bottom Left) -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:id="@+id/pressure"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/pressureIcon"
                    android:src="@drawable/ic_pressure"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/air_pressure"
                    android:textSize="15dp"
                    android:textColor="#80FFFFFF"
                    />

            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/pressureText"
                    android:text=""
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/pressure"/>

        </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 4 (Bottom Right) -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:id="@+id/humidity"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/humidIcon"
                    android:src="@drawable/ic_humid"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/humidity"
                    android:textSize="15dp"
                    android:textColor="#80FFFFFF"
                    />

            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/humidText"
                    android:text=""
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/humidity"/>
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
    <include layout="@layout/footer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"/>


  </RelativeLayout>

    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:menu="@layout/bottom_menu" />

</RelativeLayout>

